misc (notes, dark mode, firefox bug)

--- a/src/app.css
+++ b/src/app.css
@@ -5,12 +5,13 @@
 @theme {
 	--font-sans: 'Lexend Variable', ui-sans-serif, system-ui, sans-serif;
 	--font-display: 'Parkinsans Variable', ui-sans-serif, system-ui, sans-serif;
-	--breakpoint-xs: 30rem; /* or whatever value you want */
+	--breakpoint-xs: 30rem;
+	--color-neutral-850: #1a1a1a;
 }
 
 @layer base {
 	html {
-		@apply bg-white font-sans text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50;
+		@apply bg-white font-sans text-neutral-900 dark:bg-neutral-850 dark:text-neutral-50;
 
 		scrollbar-gutter: stable both-edges;
 		interpolate-size: allow-keywords; /* Experimental Chrome-only attribute */
